K8S/platforms-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-srv
spec:
  type: NodePort
  selector:
    app: mymicro
  ports:
    - name: mymicro
      protocol: TCP
      port: 80
      targetPort: 80
